--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div class="item" data-title="Proposition Evidence">
           <img src="static/images/proposition 1.png" alt="Learning dynamics proposition" loading="lazy"/>
          <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
-          <span class="has-text-weight-bold has-text-link">Theoretical Proposition.</span>
+          <span class="has-text-weight-bold has-text-link">Shared eNTK between Understanding and Generation.</span>
           The learning dynamics of generation  \(\Delta G_t\) and understanding
            \(\Delta U_t\)) are similar. The key difference is that
           \(\Delta U_t\) includes an additional eNTK term,
