--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
          <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
           <span class="has-text-weight-bold has-text-link">Shared eNTK between Understanding and Generation.</span>
           The learning dynamics of generation  \(\Delta G_t\) and understanding
-           \(\Delta U_t\)) are similar. The key difference is that
+           \(\Delta U_t\) are similar. The key difference is that
           \(\Delta U_t\) includes an additional eNTK term,
           \(\textcolor{#ef4444}{\mathcal{K}^{\,t}_{k,r}(\mathcal{Y}_i,\mathcal{Y}_u)}\),
           which measures alignment between \(\mathcal{Y}_i\) \((i\neq 0)\) and the post-training data
