--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 
     <!-- 标题（蓝色，与上面一致） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Improved Method: Curriculum Learning for Stronger Self-Improvement
+      Experiments on Curriculum Learning-based Self-Improvement
     </h2>
     <div class="title-underline has-text-link"></div>
 
