--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <!-- TODO: Replace with your paper title -->
-            <h1 class="title is-1 publication-title">Turning Internal Gap into Self-Improvement: Promoting the Generation-Understanding Unification in MLLMs</h1>
+            <h1 class="title is-1 publication-title" style="line-height: 1.25; text-align: center;">
+              Turning Internal Gap into Self-Improvement:<br>
+              Promoting the Generation–Understanding Unification in MLLMs
+            </h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a href="https://yujinhanml.github.io" target="_blank">Yujin Han</a><sup>1,8</sup>,
