--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
           <div class="content">
             <ul>
               <li>Non-unification is pervasive in unified MLLMs, with understanding typically outperforming generation.</li>
-              <li>Internal-gap–based self-improvement, which leverages the stronger understanding branch to guide the generation branch, effectively improves generation and promotes unification in MLLMs.</li>
-              <li>Self-improvement induces co-improvement in generation and understanding because unified MLLMs share the same empirical neural tangent kernel, which encourages aligned learning dynamics.</li>
+              <li>Internal gap–based self-improvement, which leverages the stronger understanding branch to guide the generation branch, effectively improves generation and promotes unification in MLLMs.</li>
+              <li>Self-improvement induces co-improvement in generation and understanding because unified MLLMs share the same empirical neural tangent kernel (eNTK), which encourages aligned learning dynamics.</li>
               <li>One way to capitalize on co-improvement is curriculum learning: progressively stronger generation and understanding revisit samples underutilized by pre-trained MLLMs, expanding post-training data and boosting performance and unification.</li>
             </ul>
           </div>
