--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 
         <!-- Slide 2 -->
         <div class="item" data-title="T2I-CompBench++">
-          <img src="static/images/t2i-compbench++.png" alt="T2I-CompBench++ results" loading="lazy"
+          <img src="static/images/T2I-CompBench++.png" alt="T2I-CompBench++ results" loading="lazy"
                style="display:block; margin:1rem auto 0; height:auto;">
           <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
             <span class="has-text-weight-bold has-text-link">Results on T2I-CompBench++.</span>
@@ -656,7 +656,7 @@
 
         <!-- Slide 3 -->
         <div class="item" data-title="Geneval">
-          <img src="static/images/geneval.png" alt="Geneval results" loading="lazy"
+          <img src="static/images/Geneval.png" alt="Geneval results" loading="lazy"
                style="display:block; margin:1rem auto 0; height:auto;">
           <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
             <span class="has-text-weight-bold has-text-link">Results on Geneval.</span>
@@ -666,7 +666,7 @@
 
         <!-- Slide 4 -->
         <div class="item" data-title="Science-T2I">
-          <img src="static/images/science-t2i.png" alt="Science-T2I results" loading="lazy"
+          <img src="static/images/Science-T2I.png" alt="Science-T2I results" loading="lazy"
                style="display:block; margin:1rem auto 0; height:auto;">
           <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
             <span class="has-text-weight-bold has-text-link">Results on Science-T2I.</span>
