Fix image source case sensitivity in index.html

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     <div class="title-underline has-text-link"></div>
 
     <!-- 卡片放在 container 下，宽度与其他一致 -->
-    <div class="box" style="background-color:#ffffff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
+    <div class="box" style="background-color:#f8f9ff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
 
       <!-- 图片（仅缩小 70%，不影响卡片宽度） -->
       <img src="static/images/alg1.png" alt="MLLMs' internal gap"
