--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
     <!-- 标题（蓝色） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Mechanism: Explaining the Co-improvement Effect from Learning Dynamics
+      Mechanism Insight: Explaining the Co-improvement Effect from Learning Dynamics
     </h2>
     <div class="title-underline has-text-link"></div>
 
